--- a/manifest.json
+++ b/manifest.json
@@ -10,13 +10,13 @@
   "theme_color": "#4a4a4a",
   "icons": [
     {
-      "src": "icons/llama-icon-192.png",
+      "src": "llama-icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "icons/llama-icon-512.png",
+      "src": "llama-icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
        "purpose": "any maskable"
